[gd_scene load_steps=30 format=3 uid="uid://bvgs10xd3aaqq"]

[ext_resource type="Script" path="res://Puzzles/gretta_puzzle/Terminal/Terminal Screen Scripts/Screen Scripts/Home Screen.gd" id="1_cyanp"]
[ext_resource type="Texture2D" uid="uid://b3nergmcotjq2" path="res://Tilesets/pixel-cyberpunk-interior.png" id="2_fktl6"]
[ext_resource type="Texture2D" uid="uid://dwkkathc6cakg" path="res://Puzzles/gretta_puzzle/Terminal/Assets/terminal images/terminalFront.png" id="3_x3utk"]
[ext_resource type="Script" path="res://Puzzles/gretta_puzzle/Terminal/Terminal Screen Scripts/Exit Button.gd" id="4_3byar"]
[ext_resource type="Texture2D" uid="uid://dwfxii5ygqn6a" path="res://Puzzles/gretta_puzzle/Terminal/Assets/app icons/exitHovered.png" id="5_dtr10"]
[ext_resource type="Texture2D" uid="uid://dxu7pq4rm2ko2" path="res://Puzzles/gretta_puzzle/Terminal/Assets/app icons/exitDefault.png" id="6_kk3oe"]
[ext_resource type="Script" path="res://Puzzles/gretta_puzzle/Terminal/Terminal Screen Scripts/Folders Scripts/Home Screen Folders.gd" id="7_ggdbw"]
[ext_resource type="Texture2D" uid="uid://kqtex5jcix7e" path="res://Puzzles/gretta_puzzle/Terminal/Assets/app icons/folderClosed.png" id="8_62f1k"]
[ext_resource type="FontFile" uid="uid://bpayi17r24x8p" path="res://Puzzles/gretta_puzzle/Terminal/Assets/font/unispace bd.otf" id="9_13byi"]
[ext_resource type="AudioStream" uid="uid://dfpex8rcldebh" path="res://SFX/electric buzzing.mp3" id="10_sdeqc"]
[ext_resource type="Texture2D" uid="uid://fqjeivgevikl" path="res://Puzzles/gretta_puzzle/Terminal/Assets/static pictures/tile000.png" id="11_0ol1h"]
[ext_resource type="Texture2D" uid="uid://bd8e2wi3krsrf" path="res://Puzzles/gretta_puzzle/Terminal/Assets/static pictures/tile001.png" id="12_7367d"]
[ext_resource type="Texture2D" uid="uid://h4wqf753usnm" path="res://Puzzles/gretta_puzzle/Terminal/Assets/static pictures/tile002.png" id="13_yakbo"]
[ext_resource type="Texture2D" uid="uid://1fu74ieyomtj" path="res://Puzzles/gretta_puzzle/Terminal/Assets/static pictures/tile003.png" id="14_map4e"]
[ext_resource type="Texture2D" uid="uid://dic3jxijioef8" path="res://Puzzles/gretta_puzzle/Terminal/Assets/static pictures/tile005.png" id="15_lwmj3"]
[ext_resource type="Texture2D" uid="uid://bri3i7d54r2uk" path="res://Puzzles/gretta_puzzle/Terminal/Assets/static pictures/tile004.png" id="16_4uh0h"]
[ext_resource type="Texture2D" uid="uid://begpg4avcgjsc" path="res://Puzzles/gretta_puzzle/Terminal/Assets/static pictures/tile006.png" id="17_5ft5v"]
[ext_resource type="Texture2D" uid="uid://bjpb2jn3qnexl" path="res://Puzzles/gretta_puzzle/Terminal/Assets/static pictures/tile007.png" id="18_7kb5u"]
[ext_resource type="Texture2D" uid="uid://ba65w641l31qd" path="res://Puzzles/gretta_puzzle/Terminal/Assets/static pictures/tile008.png" id="19_bgjqk"]
[ext_resource type="Texture2D" uid="uid://dg3o3u70s0d67" path="res://Puzzles/gretta_puzzle/Terminal/Assets/static pictures/tile009.png" id="20_1f56k"]
[ext_resource type="Script" path="res://Puzzles/gretta_puzzle/Terminal/Terminal Screen Scripts/Post It.gd" id="21_4sg84"]
[ext_resource type="Texture2D" uid="uid://v0qoayq4argd" path="res://Puzzles/gretta_puzzle/Terminal/Assets/terminal images/postItNote.png" id="22_d80nv"]
[ext_resource type="Texture2D" uid="uid://dxh4ctmgcxfmh" path="res://Puzzles/gretta_puzzle/Terminal/Assets/terminal images/clickPostIt.png" id="23_k1nrr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2owu1"]
texture = ExtResource("2_fktl6")
0:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
32:0/0 = 0
33:0/0 = 0
34:0/0 = 0
35:0/0 = 0
36:0/0 = 0
37:0/0 = 0
38:0/0 = 0
39:0/0 = 0
40:0/0 = 0
41:0/0 = 0
0:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
36:1/0 = 0
37:1/0 = 0
38:1/0 = 0
39:1/0 = 0
40:1/0 = 0
41:1/0 = 0
0:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
22:2/0 = 0
23:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
0:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
22:3/0 = 0
23:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
40:4/0 = 0
41:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
38:5/0 = 0
39:5/0 = 0
40:5/0 = 0
41:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
38:6/0 = 0
39:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
38:7/0 = 0
39:7/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
26:8/0 = 0
27:8/0 = 0
29:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
32:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
3:10/0 = 0
6:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
36:10/0 = 0
37:10/0 = 0
38:10/0 = 0
39:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
36:11/0 = 0
37:11/0 = 0
38:11/0 = 0
39:11/0 = 0
1:12/0 = 0
8:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
32:12/0 = 0
33:12/0 = 0
34:12/0 = 0
35:12/0 = 0
36:12/0 = 0
37:12/0 = 0
1:13/0 = 0
8:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
32:13/0 = 0
33:13/0 = 0
34:13/0 = 0
35:13/0 = 0
36:13/0 = 0
37:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
32:14/0 = 0
33:14/0 = 0
34:14/0 = 0
35:14/0 = 0
36:14/0 = 0
37:14/0 = 0
38:14/0 = 0
39:14/0 = 0
3:15/0 = 0
6:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
32:15/0 = 0
33:15/0 = 0
34:15/0 = 0
35:15/0 = 0
36:15/0 = 0
37:15/0 = 0
38:15/0 = 0
39:15/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
24:16/0 = 0
25:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
30:16/0 = 0
31:16/0 = 0
38:16/0 = 0
39:16/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
24:17/0 = 0
25:17/0 = 0
26:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
30:17/0 = 0
31:17/0 = 0
38:17/0 = 0
39:17/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0
26:18/0 = 0
27:18/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
24:21/0 = 0
25:21/0 = 0
26:21/0 = 0
27:21/0 = 0

[sub_resource type="TileSet" id="TileSet_thprx"]
sources/1 = SubResource("TileSetAtlasSource_2owu1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_25kwe"]
size = Vector2(67, 51)

[sub_resource type="SpriteFrames" id="SpriteFrames_aajdm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_0ol1h")
}, {
"duration": 1.0,
"texture": ExtResource("12_7367d")
}, {
"duration": 1.0,
"texture": ExtResource("13_yakbo")
}, {
"duration": 1.0,
"texture": ExtResource("14_map4e")
}, {
"duration": 1.0,
"texture": ExtResource("15_lwmj3")
}, {
"duration": 1.0,
"texture": ExtResource("16_4uh0h")
}, {
"duration": 1.0,
"texture": ExtResource("17_5ft5v")
}, {
"duration": 1.0,
"texture": ExtResource("18_7kb5u")
}, {
"duration": 1.0,
"texture": ExtResource("19_bgjqk")
}, {
"duration": 1.0,
"texture": ExtResource("20_1f56k")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="Gradient" id="Gradient_u771w"]
offsets = PackedFloat32Array(0, 0.832117, 0.989051)
colors = PackedColorArray(1, 1, 1, 1, 0.0129151, 0.0129151, 0.0129151, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p7ic1"]
gradient = SubResource("Gradient_u771w")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.912791, 0.0639535)

[node name="home terminal screen" type="Node2D"]
position = Vector2(1, 3)
script = ExtResource("1_cyanp")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(300, 225)
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_thprx")
format = 2
layer_0/name = "border"
layer_0/tile_data = PackedInt32Array(655358, 196609, 10, 589836, 262145, 1, -65538, 65537, 11, -65537, 327681, 9, -131072, 327681, 9, -131071, 327681, 9, -131070, 327681, 9, -131069, 327681, 9, -131068, 327681, 9, -131067, 327681, 9, -131066, 327681, 9, -131065, 327681, 9, -131064, 327681, 9, -131063, 327681, 9, -131062, 327681, 9, -131061, 327681, 9, -131060, 327681, 9, -131059, 327681, 9, -131058, 327681, 9, -131057, 327681, 9, -131056, 327681, 9, -131055, 327681, 9, -131054, 327681, 9, -131053, 327681, 9, -131052, 327681, 9, -131051, 327681, 9, -2, 196609, 10, 65534, 196609, 10, 131070, 196609, 10, 262142, 196609, 10, 196606, 196609, 10, 327678, 196609, 10, 393214, 196609, 10, 458750, 196609, 10, 524286, 196609, 10, 589822, 196609, 10, 720894, 196609, 10, 786430, 65537, 14, -65514, 393217, 10, 22, 393217, 10, 131094, 393217, 10, 65558, 393217, 10, 720918, 524289, 14, 655382, 393217, 10, 589846, 393217, 10, 524310, 393217, 10, 458774, 393217, 10, 393238, 393217, 10, 327702, 393217, 10, 262166, 393217, 10, 196630, 393217, 10, -1, 262145, 1, -65536, 262145, 1, -65535, 262145, 1, -65534, 262145, 1, -65533, 262145, 1, -65532, 262145, 1, -65531, 262145, 1, -65530, 262145, 1, -65529, 262145, 1, -65528, 262145, 1, -65527, 262145, 1, -65526, 262145, 1, -65525, 262145, 1, -65524, 262145, 1, -65523, 262145, 1, -65522, 262145, 1, -65521, 262145, 1, -65520, 262145, 1, -65519, 262145, 1, -65518, 262145, 1, -65517, 262145, 1, -65516, 262145, 1, -65515, 262145, 1, 21, 262145, 1, 65557, 262145, 1, 131093, 262145, 1, 196629, 262145, 1, 262165, 262145, 1, 327701, 262145, 1, 393237, 262145, 1, 458773, 262145, 1, 524309, 262145, 1, 589845, 262145, 1, 655381, 262145, 1, 720917, 262145, 16, 655380, 262145, 1, 655379, 262145, 1, 655378, 262145, 1, 655377, 262145, 1, 655376, 262145, 1, 720912, 262145, 16, 720911, 262145, 16, 720910, 262145, 16, 720913, 262145, 16, 720914, 262145, 16, 720915, 262145, 16, 720916, 262145, 16, 655375, 262145, 1, 655374, 262145, 1, 655373, 262145, 1, 655372, 262145, 1, 655371, 262145, 1, 655370, 262145, 1, 655369, 262145, 1, 655368, 262145, 1, 655367, 262145, 1, 655366, 262145, 1, 655365, 262145, 1, 655364, 262145, 1, 655363, 262145, 1, 655362, 262145, 1, 655361, 262145, 1, 655360, 262145, 1, 720895, 262145, 1, 786431, 262145, 16, 720896, 262145, 16, 720897, 262145, 16, 720898, 262145, 16, 720899, 262145, 16, 720900, 262145, 16, 720901, 262145, 16, 720902, 262145, 16, 720903, 262145, 16, 720904, 262145, 16, 720905, 262145, 16, 720906, 262145, 16, 720907, 262145, 16, 720908, 262145, 16, 720909, 262145, 16, 655359, 262145, 1, 589823, 262145, 1, 524287, 262145, 1, 458751, 262145, 1, 393215, 262145, 1, 327679, 262145, 1, 262143, 262145, 1, 196607, 262145, 1, 131071, 262145, 1, 65535, 262145, 1, 393217, 262145, 1, 327681, 262145, 1, 262145, 262145, 1, 196609, 262145, 1, 131073, 262145, 1, 65537, 262145, 1, 1, 262145, 1, 0, 262145, 1, 65536, 262145, 1, 131072, 262145, 1, 196608, 262145, 1, 262144, 262145, 1, 327680, 262145, 1, 393216, 262145, 1, 458752, 262145, 1, 524288, 262145, 1, 589824, 262145, 1, 589825, 262145, 1, 524289, 262145, 1, 458753, 262145, 1, 458754, 262145, 1, 393218, 262145, 1, 327682, 262145, 1, 262146, 262145, 1, 196610, 262145, 1, 131074, 262145, 1, 65538, 262145, 1, 2, 262145, 1, 3, 262145, 1, 65539, 262145, 1, 131075, 262145, 1, 196611, 262145, 1, 262147, 262145, 1, 327683, 262145, 1, 393219, 262145, 1, 458755, 262145, 1, 524291, 262145, 1, 524290, 262145, 1, 589826, 262145, 1, 589827, 262145, 1, 589828, 262145, 1, 524292, 262145, 1, 458756, 262145, 1, 393220, 262145, 1, 327684, 262145, 1, 262148, 262145, 1, 196612, 262145, 1, 131076, 262145, 1, 65540, 262145, 1, 4, 262145, 1, 5, 262145, 1, 65541, 262145, 1, 131077, 262145, 1, 196613, 262145, 1, 262149, 262145, 1, 327685, 262145, 1, 393221, 262145, 1, 458757, 262145, 1, 524293, 262145, 1, 589829, 262145, 1, 589830, 262145, 1, 524294, 262145, 1, 458758, 262145, 1, 393222, 262145, 1, 327686, 262145, 1, 262150, 262145, 1, 196614, 262145, 1, 131078, 262145, 1, 65542, 262145, 1, 6, 262145, 1, 7, 262145, 1, 65543, 262145, 1, 131079, 262145, 1, 196615, 262145, 1, 262151, 262145, 1, 327687, 262145, 1, 393223, 262145, 1, 458759, 262145, 1, 524295, 262145, 1, 589831, 262145, 1, 589832, 262145, 1, 524296, 262145, 1, 458760, 262145, 1, 393224, 262145, 1, 327688, 262145, 1, 262152, 262145, 1, 196616, 262145, 1, 131080, 262145, 1, 65544, 262145, 1, 8, 262145, 1, 9, 262145, 1, 65545, 262145, 1, 131081, 262145, 1, 196617, 262145, 1, 262153, 262145, 1, 327689, 262145, 1, 393225, 262145, 1, 458761, 262145, 1, 589833, 262145, 1, 589834, 262145, 1, 524298, 262145, 1, 458762, 262145, 1, 393226, 262145, 1, 327690, 262145, 1, 262154, 262145, 1, 196618, 262145, 1, 131082, 262145, 1, 65546, 262145, 1, 10, 262145, 1, 11, 262145, 1, 65547, 262145, 1, 131083, 262145, 1, 196619, 262145, 1, 262155, 262145, 1, 327691, 262145, 1, 393227, 262145, 1, 458763, 262145, 1, 524299, 262145, 1, 589835, 262145, 1, 524300, 262145, 1, 458764, 262145, 1, 393228, 262145, 1, 327692, 262145, 1, 262156, 262145, 1, 196620, 262145, 1, 131084, 262145, 1, 65548, 262145, 1, 12, 262145, 1, 13, 262145, 1, 65549, 262145, 1, 131085, 262145, 1, 196621, 262145, 1, 262157, 262145, 1, 327693, 262145, 1, 393229, 262145, 1, 458765, 262145, 1, 524301, 262145, 1, 589837, 262145, 1, 589838, 262145, 1, 524302, 262145, 1, 458766, 262145, 1, 393230, 262145, 1, 327694, 262145, 1, 262158, 262145, 1, 196622, 262145, 1, 131086, 262145, 1, 65550, 262145, 1, 14, 262145, 1, 15, 262145, 1, 65551, 262145, 1, 131087, 262145, 1, 196623, 262145, 1, 262159, 262145, 1, 327695, 262145, 1, 393231, 262145, 1, 458767, 262145, 1, 524303, 262145, 1, 589839, 262145, 1, 589840, 262145, 1, 524304, 262145, 1, 458768, 262145, 1, 393232, 262145, 1, 327696, 262145, 1, 262160, 262145, 1, 196624, 262145, 1, 131088, 262145, 1, 65552, 262145, 1, 16, 262145, 1, 17, 262145, 1, 65553, 262145, 1, 131089, 262145, 1, 196625, 262145, 1, 262161, 262145, 1, 327697, 262145, 1, 393233, 262145, 1, 458769, 262145, 1, 524305, 262145, 1, 589841, 262145, 1, 589842, 262145, 1, 524306, 262145, 1, 458770, 262145, 1, 393234, 262145, 1, 327698, 262145, 1, 262162, 262145, 1, 196626, 262145, 1, 131090, 262145, 1, 65554, 262145, 1, 18, 262145, 1, 19, 262145, 1, 65555, 262145, 1, 131091, 262145, 1, 196627, 262145, 1, 262163, 262145, 1, 327699, 262145, 1, 393235, 262145, 1, 458771, 262145, 1, 524307, 262145, 1, 589843, 262145, 1, 589844, 262145, 1, 524308, 262145, 1, 458772, 262145, 1, 393236, 262145, 1, 327700, 262145, 1, 262164, 262145, 1, 196628, 262145, 1, 131092, 262145, 1, 65556, 262145, 1, 20, 262145, 1, -131050, 524289, 11)
layer_1/name = "background"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()

[node name="front of terminal" type="Sprite2D" parent="."]
position = Vector2(980, 545)
rotation = -0.00698132
scale = Vector2(1.025, 1.025)
texture = ExtResource("3_x3utk")

[node name="exit" type="Node2D" parent="."]
script = ExtResource("4_3byar")

[node name="exit_hovered" type="Sprite2D" parent="exit"]
position = Vector2(1210, 420)
scale = Vector2(0.15, 0.15)
texture = ExtResource("5_dtr10")

[node name="exit_default" type="Sprite2D" parent="exit"]
position = Vector2(1210, 420)
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_kk3oe")

[node name="Area2D" type="Area2D" parent="exit"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit/Area2D"]
position = Vector2(1208.5, 420.5)
shape = SubResource("RectangleShape2D_25kwe")

[node name="folder 1 - prisoner enrichment" type="Node2D" parent="."]
position = Vector2(50, 0)
script = ExtResource("7_ggdbw")

[node name="folder_default" type="Sprite2D" parent="folder 1 - prisoner enrichment"]
position = Vector2(760, 500)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_62f1k")

[node name="folder 1 - Label" type="Label" parent="folder 1 - prisoner enrichment"]
offset_left = 681.0
offset_top = 567.0
offset_right = 856.0
offset_bottom = 589.0
theme_override_fonts/font = ExtResource("9_13byi")
theme_override_font_sizes/font_size = 15
text = "prisoner enrichment"

[node name="folder 2 - employees only" type="Node2D" parent="."]
position = Vector2(200, 0)

[node name="folder_default" type="Sprite2D" parent="folder 2 - employees only"]
position = Vector2(800, 500)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_62f1k")

[node name="folder 2 - Label" type="Label" parent="folder 2 - employees only"]
offset_left = 739.0
offset_top = 567.0
offset_right = 868.0
offset_bottom = 589.0
theme_override_fonts/font = ExtResource("9_13byi")
theme_override_font_sizes/font_size = 15
text = "employees only"

[node name="home terminal screen - LineEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
offset_left = 705.0
offset_top = 769.0
offset_right = 1233.0
offset_bottom = 827.0
theme_override_fonts/font = ExtResource("9_13byi")

[node name="Computer Buzzing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_sdeqc")
volume_db = 12.0
autoplay = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.0705882)
position = Vector2(977.972, 603.951)
scale = Vector2(1.32839, 2.80061)
skew = 0.0296706
sprite_frames = SubResource("SpriteFrames_aajdm")
autoplay = "default"
frame_progress = 0.97607

[node name="Computer Light" type="PointLight2D" parent="."]
position = Vector2(971, 569)
scale = Vector2(15.4297, 10.9766)
color = Color(0.854902, 0.854902, 0.854902, 1)
energy = 0.84
texture = SubResource("GradientTexture2D_p7ic1")
texture_scale = 1.2

[node name="post it" type="Node2D" parent="."]
script = ExtResource("21_4sg84")

[node name="Area2D" type="Area2D" parent="post it"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="post it/Area2D"]
position = Vector2(1318, 385)
scale = Vector2(0.6, 0.6)
polygon = PackedVector2Array(-95, -160, -98.3333, -155, -98.3333, -148.333, -95, -20, -90, -8.33331, -83.3333, 3.33337, -75, 15, -63.3333, 28.3334, -46.6667, 43.3334, -33.3333, 53.3334, -10, 68.3334, 20, 83.3334, 53.3333, 95, 85, 100, 125, 101.667, 163.333, 100, 165, 95, 165, 26.6667, 158.333, -146.667, 158.333, -163.333, 151.667, -166.667, 145, -168.333, 51.6667, -166.667, -35, -163.333)

[node name="Sprite2D" type="Sprite2D" parent="post it/Area2D"]
position = Vector2(1318, 385)
scale = Vector2(0.6, 0.6)
texture = ExtResource("22_d80nv")

[node name="PostItWindow" type="Window" parent="."]
unique_name_in_owner = true
position = Vector2i(506, 49)
size = Vector2i(550, 600)

[node name="ColorRect" type="ColorRect" parent="PostItWindow"]
offset_right = 550.0
offset_bottom = 600.0
color = Color(0.568627, 0.870588, 0.960784, 1)

[node name="Node2D" type="Node2D" parent="PostItWindow/ColorRect"]

[node name="Sprite2D" type="Sprite2D" parent="PostItWindow/ColorRect/Node2D"]
position = Vector2(250, 300)
texture = ExtResource("23_k1nrr")

[connection signal="input_event" from="exit/Area2D" to="exit" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="exit/Area2D" to="exit" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="exit/Area2D" to="exit" method="_on_area_2d_mouse_exited"]
[connection signal="text_submitted" from="home terminal screen - LineEdit" to="folder 1 - prisoner enrichment" method="_on_line_edit_text_submitted"]
[connection signal="input_event" from="post it/Area2D" to="post it" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="post it/Area2D" to="post it" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="post it/Area2D" to="post it" method="_on_area_2d_mouse_exited"]
[connection signal="close_requested" from="PostItWindow" to="post it" method="_on_post_it_window_close_requested"]
